styles/main.css
body {
	font-family: sans-serif;
}

header,
footer {
	color: #FFF;
	background-color: #000;
}

header,
footer {
	display: table;
	width: 100%;
}

header h1,
footer p {
	display: table-cell;
	vertical-align: middle;
	padding-left: 5px;
	padding-right: 5px;
}

nav {
	background-color: #EEE;
}

nav,
nav li a {
	color: #000;
}

nav li a {
	display: block;
	padding: 5px;
	text-decoration: none;
	cursor: pointer;
}

nav li a:link,
nav li a:visited,
nav li a:hover {
}
nav li a:active {
	outline: none;
}
nav li a:focus {
	outline-offset: -1px; /* hack to prevent Firefox from widening the element (despite the spec!) */
}

footer .username {
	display: block;
	float: right;
	font-style: italic;
}

.pane article {
	height: 100%;
	background-color: #FFF;
}

.column {
	width: 20%;
	height: 100%;
	overflow: auto; /* XXX: should be on UL/OL, but full-height is tricky then */
	float: left;
	border-right: 1px solid #AAA;
}

.column h3 {
	display: none;
}

.column input {
	display: block;
	width: 95%; /* XXX: 100% would be more desirable, but leads to excessive width */
	margin: 2px auto;
}
.column ul,
.column ol {
	border-top: 1px solid #CCC;
	list-style-type: none;
}

.column:first-child ul {
	border-top: none;
}

.column li {
	border-bottom: 1px solid #CCC;
	background-color: #F8F8F8;
}

.button {
	border: 1px solid #CCC;
	padding: 2px 5px;
	text-decoration: none;
	color: #1C94C4;
	background-color: #F6F6F6;
	cursor: pointer;
}

.button:focus {
	outline: none;
}

.selected {
	font-weight: bold;
	color: #FFF;
	background-color: #3D8CFF;
}

.disabled {
	color: #AAA;
	cursor: auto;
}

.info,
.error {
	color: #000;
	cursor: pointer;
}

.info {
	background-color: #FCEFA1;
}

.error {
	background-color: #F88 !important;
}

#btnFullscreen {
	display: block;
	float: right;
	margin-left: 10px;
	margin-bottom: 10px;
	border-top-width: 0;
	border-right-width: 0;
}

